...
    }
}

object TestData {
    val sampleConversation = Conversation(
        threadId = ThreadId(1),
        participants = listOf(Participant(address = "+989121234567", displayName = "Ali")),
        snippet = "سلام چطوری؟",
        date = System.currentTimeMillis(),
        messageCount = 3,
        read = false,
        isStarred = false,
        isPinned = true,
...
